--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/clarkio/simple-node-server#readme",
   "dependencies": {
     "applicationinsights": "^1.0.0",
+    "body-parser": "^1.19.0",
     "express": "^4.16.0"
   },
   "devDependencies": {
