--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "applicationinsights": "^1.0.0",
     "body-parser": "^1.19.0",
-    "express": "^4.16.0"
+    "express": "^4.16.0",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
